--- a/bilstm_SA.ipynb
+++ b/bilstm_SA.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "SaQmAYWs1wAv"
       },
@@ -57,7 +57,7 @@
         "id": "k7wOY4ro7va_",
         "outputId": "df9e8559-46c9-4324-f195-f2dc12b248d8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,7 +80,7 @@
         "id": "ZyEdq6kX7yDx",
         "outputId": "4b0b2589-788a-44be-b2e2-0e1b34e70c46"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +120,7 @@
         "id": "uU0Oz6bT70Hn",
         "outputId": "d3eaa57e-90c1-49ac-c7df-7dd1ad7d3386"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -298,7 +298,7 @@
       "metadata": {
         "id": "z-COZLxE9bch"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -311,7 +311,7 @@
       "metadata": {
         "id": "oHjhhJe02RHq"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -326,7 +326,7 @@
       "metadata": {
         "id": "cjTuEsm22TBh"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -347,7 +347,7 @@
         "id": "_n7cvg2R-m3y",
         "outputId": "321ccb92-639b-43d0-d044-a95b536d2029"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,16 +375,13 @@
         "def remove_common_words(tokens):\n",
         "  new_tokens = [token for token in tokens if token not in most_common_words]\n",
         "  return new_tokens\n",
-        "\n",
         "X = remove_common_words(X)\n",
-        "\n",
-        "\n",
         "X = pad_sequences(X, maxlen=max_length)"
       ],
       "metadata": {
         "id": "STO_xtVt3O9e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -397,31 +394,7 @@
       "metadata": {
         "id": "__QvQKel3PWk"
       },
-      "execution_count": 10,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#from imblearn.over_sampling import RandomOverSampler\n",
-        "#rus=RandomOverSampler(random_state=42)\n",
-        "#X_res, y_res = rus.fit_resample(X_train,y_train)"
-      ],
-      "metadata": {
-        "id": "MfNDVs5p3SAb"
-      },
-      "execution_count": 11,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#y_res.shape"
-      ],
-      "metadata": {
-        "id": "46hoURDtoUHp"
-      },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -435,7 +408,7 @@
       "metadata": {
         "id": "Uwjl3zya3U76"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -455,7 +428,7 @@
       "metadata": {
         "id": "9vqusbmC3dF8"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -469,7 +442,7 @@
       "metadata": {
         "id": "d_Z3U-h_3gdc"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -483,7 +456,7 @@
       "metadata": {
         "id": "Zp_pdmFd3mvi"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -506,8 +479,7 @@
         "bidirectional = True\n",
         "lr = 0.01\n",
         "batch_size = 64\n",
-        "num_epochs = 100\n",
-        "patience = 5\n",
+        "num_epochs = 11\n",
         "\n",
         "class BiLSTMAttention(nn.Module):\n",
         "    def __init__(self, vocab_size, embedding_dim, hidden_dim, output_dim, num_layers):\n",
@@ -544,7 +516,7 @@
       "metadata": {
         "id": "VEIxcRNd3rfX"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -554,11 +526,9 @@
         "model = BiLSTMAttention(vocab_size, embedding_dim, hidden_dim, output_dim, num_layers).to(device)\n",
         "optimizer = optim.Adam(model.parameters(),lr=0.01)\n",
         "criterion = nn.BCEWithLogitsLoss()\n",
-        "counter_nb = 0\n",
-        "for epoch in tqdm(range(11)):\n",
+        "\n",
+        "for epoch in tqdm(range(num_epochs)):\n",
         "     model.train()\n",
-        "     counter_nb = counter_nb + 1 \n",
-        "     print(counter_nb)\n",
         "     running_loss = 0.0\n",
         "     with torch.cuda.device(0):\n",
         "       for batch in train_dataloader:\n",
@@ -575,9 +545,6 @@
         "         #print('Train Accuracy: {:.4f}'.format(acc))\n",
         "     epoch_loss = running_loss / (len(train_dataloader))\n",
         "\n",
-        "     best_val_loss = np.inf\n",
-        "     patience = 2\n",
-        "     counter = 0\n",
         "     val_loss = 0.0\n",
         "     model.eval()\n",
         "     with torch.no_grad():\n",
@@ -591,16 +558,7 @@
         "             #val_acc = accuracy_score(labels.cpu().detach().numpy(), val_preds.cpu().detach().numpy())\n",
         "             #print('Val Accuracy: {:.4f}'.format(val_acc))\n",
         "     val_loss = val_loss / (len(val_dataloader))\n",
-        "     # Check if the validation loss has improved\n",
-        "     if val_loss < best_val_loss:\n",
-        "                best_val_loss = val_loss\n",
-        "                counter = 0\n",
-        "     else:\n",
-        "         counter += 1\n",
-        "\n",
-        "     # Stop the training process if the validation loss hasn't improved for `patience` epochs\n",
-        "     if counter >= patience:\n",
-        "         break\n",
+        "     \n",
         "     print(\" epoch loss :\", epoch_loss , \"| val loss :\", val_loss)\n",
         "     #print('Train Accuracy: {:.4f}'.format(acc))\n",
         "     #print('Val Accuracy: {:.4f}'.format(val_acc))\n",
@@ -615,7 +573,7 @@
         "id": "eE9Y_aBf3sDm",
         "outputId": "b8da8dae-22c4-4873-9865-9262fa931526"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -836,7 +794,7 @@
         "id": "3Iogvg4NHukE",
         "outputId": "e6f9d53d-6b5a-442a-f862-24918c5e2f5a"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -888,7 +846,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -907,7 +865,7 @@
       "metadata": {
         "id": "blA9EW05Ct5K"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     }
   ]
