--- a/AraElectra.ipynb
+++ b/AraElectra.ipynb
@@ -3074,7 +3074,7 @@
         "training_args.lr_scheduler_type = 'cosine'\n",
         "training_args.evaluate_during_training = True\n",
         "training_args.adam_epsilon =1e-8 \n",
-        "training_args.learning_rate = 2e-05\n",
+        "training_args.learning_rate = 5e-05\n",
         "training_args.fp16 = True\n",
         "training_args.per_device_train_batch_size = 64\n",
         "training_args.per_device_eval_batch_size = 32\n",
@@ -3090,9 +3090,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "967411f1-bbef-4939-87be-ceae748e2e2b"
+        "outputId": "9efbbd50-1352-45c4-ca81-44e853c47a02"
       },
-      "execution_count": 44,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -3128,9 +3128,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cTHgtQpwAbqS",
-        "outputId": "ddf38e71-8660-4d77-8fc6-c512444c0684"
+        "outputId": "65bd1c33-831e-4396-f65a-e1d5499ffca8"
       },
-      "execution_count": 45,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -3165,9 +3165,9 @@
           "height": 1000
         },
         "id": "93rCEFRyAdlh",
-        "outputId": "a2b73221-5528-4fec-f5dc-7822416aa558"
+        "outputId": "1b06d3ab-6d60-45de-9227-4bb903364527"
       },
-      "execution_count": 46,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -3190,7 +3190,7 @@
               "    <div>\n",
               "      \n",
               "      <progress value='3296' max='3296' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [3296/3296 35:23, Epoch 3/4]\n",
+              "      [3296/3296 35:13, Epoch 3/4]\n",
               "    </div>\n",
               "    <table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
@@ -3208,43 +3208,43 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <td>0</td>\n",
-              "      <td>0.976500</td>\n",
-              "      <td>0.485814</td>\n",
-              "      <td>0.823662</td>\n",
-              "      <td>0.803903</td>\n",
-              "      <td>0.831306</td>\n",
-              "      <td>0.821914</td>\n",
-              "      <td>0.822186</td>\n",
+              "      <td>0.836500</td>\n",
+              "      <td>0.345167</td>\n",
+              "      <td>0.880141</td>\n",
+              "      <td>0.868248</td>\n",
+              "      <td>0.884140</td>\n",
+              "      <td>0.879263</td>\n",
+              "      <td>0.879345</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>2</td>\n",
-              "      <td>0.385400</td>\n",
-              "      <td>0.316502</td>\n",
-              "      <td>0.891597</td>\n",
-              "      <td>0.887216</td>\n",
-              "      <td>0.895505</td>\n",
-              "      <td>0.891127</td>\n",
-              "      <td>0.892237</td>\n",
+              "      <td>0.240900</td>\n",
+              "      <td>0.230361</td>\n",
+              "      <td>0.925718</td>\n",
+              "      <td>0.927653</td>\n",
+              "      <td>0.929188</td>\n",
+              "      <td>0.925324</td>\n",
+              "      <td>0.926457</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>2</td>\n",
-              "      <td>0.291900</td>\n",
-              "      <td>0.248981</td>\n",
-              "      <td>0.919847</td>\n",
-              "      <td>0.920203</td>\n",
-              "      <td>0.920553</td>\n",
-              "      <td>0.919635</td>\n",
-              "      <td>0.920226</td>\n",
+              "      <td>0.146100</td>\n",
+              "      <td>0.183334</td>\n",
+              "      <td>0.947375</td>\n",
+              "      <td>0.950627</td>\n",
+              "      <td>0.948284</td>\n",
+              "      <td>0.947204</td>\n",
+              "      <td>0.947891</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>3</td>\n",
-              "      <td>0.195900</td>\n",
-              "      <td>0.250357</td>\n",
-              "      <td>0.921949</td>\n",
-              "      <td>0.922418</td>\n",
-              "      <td>0.923482</td>\n",
-              "      <td>0.921694</td>\n",
-              "      <td>0.922536</td>\n",
+              "      <td>0.058300</td>\n",
+              "      <td>0.189912</td>\n",
+              "      <td>0.951824</td>\n",
+              "      <td>0.954435</td>\n",
+              "      <td>0.952851</td>\n",
+              "      <td>0.951620</td>\n",
+              "      <td>0.952350</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table><p>"
@@ -3266,14 +3266,14 @@
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.89      0.83      0.86      4706\n",
-            "           1       0.71      0.87      0.78      4695\n",
-            "           2       0.86      0.79      0.82      4741\n",
-            "           3       0.87      0.79      0.83      4473\n",
+            "           0       0.92      0.90      0.91      4706\n",
+            "           1       0.79      0.90      0.84      4695\n",
+            "           2       0.94      0.85      0.89      4741\n",
+            "           3       0.89      0.87      0.88      4473\n",
             "\n",
-            "    accuracy                           0.82     18615\n",
-            "   macro avg       0.83      0.82      0.82     18615\n",
-            "weighted avg       0.83      0.82      0.82     18615\n",
+            "    accuracy                           0.88     18615\n",
+            "   macro avg       0.88      0.88      0.88     18615\n",
+            "weighted avg       0.88      0.88      0.88     18615\n",
             "\n"
           ]
         },
@@ -3295,14 +3295,14 @@
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.92      0.92      0.92      4706\n",
-            "           1       0.85      0.89      0.87      4695\n",
-            "           2       0.87      0.94      0.90      4741\n",
-            "           3       0.94      0.81      0.87      4473\n",
+            "           0       0.94      0.96      0.95      4706\n",
+            "           1       0.87      0.94      0.91      4695\n",
+            "           2       0.94      0.97      0.95      4741\n",
+            "           3       0.97      0.84      0.90      4473\n",
             "\n",
-            "    accuracy                           0.89     18615\n",
-            "   macro avg       0.90      0.89      0.89     18615\n",
-            "weighted avg       0.89      0.89      0.89     18615\n",
+            "    accuracy                           0.93     18615\n",
+            "   macro avg       0.93      0.93      0.93     18615\n",
+            "weighted avg       0.93      0.93      0.93     18615\n",
             "\n"
           ]
         },
@@ -3322,14 +3322,14 @@
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.93      0.95      0.94      4706\n",
-            "           1       0.88      0.92      0.90      4695\n",
-            "           2       0.94      0.94      0.94      4741\n",
-            "           3       0.92      0.88      0.90      4473\n",
+            "           0       0.95      0.97      0.96      4706\n",
+            "           1       0.93      0.94      0.93      4695\n",
+            "           2       0.96      0.98      0.97      4741\n",
+            "           3       0.96      0.90      0.93      4473\n",
             "\n",
-            "    accuracy                           0.92     18615\n",
-            "   macro avg       0.92      0.92      0.92     18615\n",
-            "weighted avg       0.92      0.92      0.92     18615\n",
+            "    accuracy                           0.95     18615\n",
+            "   macro avg       0.95      0.95      0.95     18615\n",
+            "weighted avg       0.95      0.95      0.95     18615\n",
             "\n"
           ]
         },
@@ -3351,14 +3351,14 @@
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.94      0.95      0.94      4706\n",
-            "           1       0.89      0.92      0.90      4695\n",
-            "           2       0.93      0.96      0.94      4741\n",
-            "           3       0.94      0.86      0.90      4473\n",
+            "           0       0.96      0.97      0.97      4706\n",
+            "           1       0.93      0.95      0.94      4695\n",
+            "           2       0.96      0.98      0.97      4741\n",
+            "           3       0.97      0.90      0.93      4473\n",
             "\n",
-            "    accuracy                           0.92     18615\n",
-            "   macro avg       0.92      0.92      0.92     18615\n",
-            "weighted avg       0.92      0.92      0.92     18615\n",
+            "    accuracy                           0.95     18615\n",
+            "   macro avg       0.95      0.95      0.95     18615\n",
+            "weighted avg       0.95      0.95      0.95     18615\n",
             "\n"
           ]
         },
@@ -3366,11 +3366,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "TrainOutput(global_step=3296, training_loss=0.4182830296673821, metrics={'train_runtime': 2125.1822, 'train_samples_per_second': 198.535, 'train_steps_per_second': 1.551, 'total_flos': 2.0371925305011696e+16, 'train_loss': 0.4182830296673821, 'epoch': 4.0})"
+              "TrainOutput(global_step=3296, training_loss=0.27516327928570866, metrics={'train_runtime': 2114.6638, 'train_samples_per_second': 199.523, 'train_steps_per_second': 1.559, 'total_flos': 2.0371925305011696e+16, 'train_loss': 0.27516327928570866, 'epoch': 4.0})"
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 51
         }
       ]
     },
@@ -3389,9 +3389,9 @@
           "height": 280
         },
         "id": "O7zAsHLOAfWx",
-        "outputId": "fd37af51-da67-4b87-b4cd-b876a54c4433"
+        "outputId": "54cfd210-5ea3-410b-ee56-88331242eeb4"
       },
-      "execution_count": 47,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -3417,16 +3417,16 @@
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.94      0.94      0.94      5523\n",
-            "           1       0.88      0.93      0.90      5405\n",
-            "           2       0.93      0.96      0.94      5445\n",
-            "           3       0.95      0.86      0.90      5527\n",
+            "           0       0.96      0.98      0.97      5523\n",
+            "           1       0.92      0.96      0.94      5405\n",
+            "           2       0.96      0.98      0.97      5445\n",
+            "           3       0.97      0.89      0.93      5527\n",
             "\n",
-            "    accuracy                           0.92     21900\n",
-            "   macro avg       0.92      0.92      0.92     21900\n",
-            "weighted avg       0.92      0.92      0.92     21900\n",
+            "    accuracy                           0.95     21900\n",
+            "   macro avg       0.95      0.95      0.95     21900\n",
+            "weighted avg       0.95      0.95      0.95     21900\n",
             "\n",
-            "{'test_loss': 0.25295141339302063, 'test_macro_f1': 0.9222465487628626, 'test_macro_f1_pos_neg': 0.9237305383707193, 'test_macro_precision': 0.9233407952650474, 'test_macro_recall': 0.9226870245731124, 'test_accuracy': 0.9225114155251142, 'test_runtime': 38.0323, 'test_samples_per_second': 575.826, 'test_steps_per_second': 18.011}\n"
+            "{'test_loss': 0.19561585783958435, 'test_macro_f1': 0.9507101835575736, 'test_macro_f1_pos_neg': 0.9538735198834671, 'test_macro_precision': 0.9513150172167723, 'test_macro_recall': 0.9510952339014519, 'test_accuracy': 0.950958904109589, 'test_runtime': 38.3457, 'test_samples_per_second': 571.12, 'test_steps_per_second': 17.864}\n"
           ]
         }
       ]
@@ -3440,16 +3440,16 @@
       "metadata": {
         "id": "fwaPTJPASBIY"
       },
-      "execution_count": 48,
+      "execution_count": 53,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "import torch\n",
-        "from transformers import AutoTokenizer, XLMRobertaForSequenceClassification\n",
+        "from transformers import AutoTokenizer, ElectraForSequenceClassification\n",
         "\n",
-        "model = XLMRobertaForSequenceClassification.from_pretrained(Model_Used, num_labels=4).to(device)\n",
+        "model = ElectraForSequenceClassification.from_pretrained(Model_Used, num_labels=4).to(device)\n",
         "\n",
         "# Load the trained model from disk\n",
         "model_state_dict = torch.load('/content/trainer.pth')\n",
@@ -3486,18 +3486,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jouGQc3SSACS",
-        "outputId": "87bbfda2-23e2-4bfe-979e-e8125d6fb7b9"
+        "outputId": "633a41ac-630e-46c5-95ef-d9069e5a1416"
       },
-      "execution_count": 40,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Some weights of the model checkpoint at Davlan/xlm-roberta-base-finetuned-arabic were not used when initializing XLMRobertaForSequenceClassification: ['lm_head.layer_norm.weight', 'lm_head.dense.bias', 'lm_head.bias', 'lm_head.dense.weight', 'lm_head.layer_norm.bias']\n",
-            "- This IS expected if you are initializing XLMRobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-            "- This IS NOT expected if you are initializing XLMRobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-            "Some weights of XLMRobertaForSequenceClassification were not initialized from the model checkpoint at Davlan/xlm-roberta-base-finetuned-arabic and are newly initialized: ['classifier.dense.weight', 'classifier.dense.bias', 'classifier.out_proj.bias', 'classifier.out_proj.weight']\n",
+            "Some weights of the model checkpoint at ZeyadAhmed/AraElectra-Arabic-SQuADv2-QA were not used when initializing ElectraForSequenceClassification: ['qa_outputs.weight', 'qa_outputs.bias']\n",
+            "- This IS expected if you are initializing ElectraForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+            "- This IS NOT expected if you are initializing ElectraForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+            "Some weights of ElectraForSequenceClassification were not initialized from the model checkpoint at ZeyadAhmed/AraElectra-Arabic-SQuADv2-QA and are newly initialized: ['classifier.dense.weight', 'classifier.dense.bias', 'classifier.out_proj.bias', 'classifier.out_proj.weight']\n",
             "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
           ]
         },
@@ -3506,7 +3506,7 @@
           "name": "stdout",
           "text": [
             "Predicted class: LY\n",
-            "Confidence score: 0.997258186340332\n"
+            "Confidence score: 0.9994478821754456\n"
           ]
         }
       ]
